--- a/merng-fcc/package.json
+++ b/merng-fcc/package.json
@@ -15,5 +15,8 @@
     "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
